objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Account lookup)</relationshipLabel>
        <relationshipName>Accountslookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_type__c</fullName>
        <label>Account type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow or not values in the warranty field.</description>
        <inlineHelpText>Check to get access to the warranty values.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingStateCode__c</fullName>
        <formula>TEXT(BillingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingStateCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <formula>BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hyster</fullName>
                </value>
                <value>
                    <fullName>Yale</fullName>
                </value>
                <value>
                    <fullName>NMHG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Caterers</fullName>
                </value>
                <value>
                    <fullName>Contract Caterer</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Events Company</fullName>
                </value>
                <value>
                    <fullName>Event Space</fullName>
                </value>
                <value>
                    <fullName>Event Venue</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Restaurant &amp; Events Group</fullName>
                </value>
                <value>
                    <fullName>Restaurant Group</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>Yearly Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Call_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Call Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_test_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact test lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Warning__c</fullName>
        <formula>IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Number_of_Shifts__c</fullName>
        <formula>CASE(
TEXT(Business_Type__c),
&quot;Caterers&quot;,7.04, 
&quot;Contract Caterer&quot;,7.04, 
&quot;Venue&quot;,2.15, 
&quot;Events&quot;,2.05, 
&quot;Events Company&quot;,2.05, 
&quot;Event Space&quot;,2.05, 
&quot;Event Venue&quot;,2.05, 
&quot;Yearly Event&quot;,2.05, 
&quot;Bar&quot;,0.92 , 
&quot;Restaurant&quot;,1.32 , 
&quot;Restaurant &amp; Events Group&quot;,1.32, 
&quot;Restaurant Group&quot;,1.32,
333)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Number of Shifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPAD_won_yes__c</fullName>
        <label>EPAD won yes</label>
        <summaryFilterItems>
            <field>Opportunity.Produt__c</field>
            <operation>equals</operation>
            <value>EPAD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EU_Number__c</fullName>
        <label>EU Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_custom__c</fullName>
        <formula>FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;www.google.com&quot;,&quot;Google&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperlink_Test__c</fullName>
        <formula>HYPERLINK(&quot;http://adobedealreg.force.com/ProductListApproval?id=&quot;&amp;Id&amp;&quot;&amp;senderId=&quot;&amp;$User.Id,&quot;ACCEPT/REJECT&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hyperlink Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificador__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Application_Field__c</fullName>
        <label>Main Application Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prime_Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Main 4</fullName>
                </value>
                <value>
                    <fullName>Other 1</fullName>
                </value>
                <value>
                    <fullName>Other 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NFR_key_issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFR key issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NFR_key_valid_to__c</fullName>
        <label>NFR key valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_EPAD_but_open_won__c</fullName>
        <label>No EPAD but open won</label>
        <summaryFilterItems>
            <field>Opportunity.Produt__c</field>
            <operation>notEqual</operation>
            <value>EPAD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_validations__c</fullName>
        <formula>IF($Setup.No_Validations__c.Flag__c, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_open_Opp_in_Acc__c</fullName>
        <label>Num open Opp in Acc</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>contains</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Can_Call_Support__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>hola</fullName>
                </value>
                <value>
                    <fullName>adios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_in_acc__c</fullName>
        <label>Opp in acc</label>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>equals</operation>
            <value>CONTENT Related</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prime_Market_Segment__c</fullName>
        <label>Prime Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prime 1</fullName>
                </value>
                <value>
                    <fullName>Prime 2</fullName>
                </value>
                <value>
                    <fullName>Prime 3</fullName>
                </value>
                <value>
                    <fullName>Prime 4</fullName>
                </value>
                <value>
                    <fullName>Prime 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field determines the region for the field.</description>
        <inlineHelpText>Select the region where you are located.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Lead_source__c</fullName>
        <label>SFDC Lead source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <inlineHelpText>Choose your SLA</inlineHelpText>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>Select your support level.</description>
        <inlineHelpText>Select your support level.</inlineHelpText>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_and_Maintenance_Expiration__c</fullName>
        <label>Support and Maintenance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Object</label>
        <referenceTo>Test_Object__c</referenceTo>
        <relationshipLabel>Accounts Related</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Won_Opps__c</fullName>
        <label>Total Amount of Won Opps</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Opp__c</fullName>
        <label>Total Opp</label>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amount_opp__c</fullName>
        <label>Total amount opp</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration__c</fullName>
        <description>Date of the warranty expiration</description>
        <inlineHelpText>Choose the date in which your warranty is going to expire</inlineHelpText>
        <label>Warranty Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <description>How many years of warranty does the customer want?</description>
        <inlineHelpText>Choose the years of warranty that you want.</inlineHelpText>
        <label>Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Active__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-year</fullName>
                </value>
                <value>
                    <fullName>2-year</fullName>
                </value>
                <value>
                    <fullName>3-year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_characters_ID_acc__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 characters ID acc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copy_auto_number_leads__c</fullName>
        <label>copy auto number leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>discount__c</fullName>
        <label>discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>discount_percent__c</fullName>
        <label>discount percent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>encrypted__c</fullName>
        <label>encrypted</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>flag__c</fullName>
        <formula>IF($Setup.No_Validations__c.Flag__c, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hay_telefono__c</fullName>
        <formula>IF( Phone  &lt;&gt; null, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hay telefono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>languaje__c</fullName>
        <label>languaje</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>español</fullName>
                </value>
                <value>
                    <fullName>ingles</fullName>
                </value>
                <value>
                    <fullName>frances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lpk1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>lpk1</label>
        <referenceTo>lpk__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mayor__c</fullName>
        <label>mayor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>menor_o_igual__c</fullName>
        <label>menor o igual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>numero_acc__c</fullName>
        <label>numero acc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>outbound__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>outbound</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>propietario_precliente__c</fullName>
        <label>propietario precliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_light__c</fullName>
        <formula>Credit_Warning__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test light</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>text_rich__c</fullName>
        <label>text rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wedw__c</fullName>
        <externalId>true</externalId>
        <label>wedw</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Accounts</fullName>
        <active>true</active>
        <description>Use this record type when setting up business accounts.</description>
        <label>Business Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Accounts_Plus</fullName>
        <active>true</active>
        <label>Business Accounts Plus</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Accounts</fullName>
        <active>true</active>
        <description>Use this record type when setting up partner accounts.</description>
        <label>Partner Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>This_is_the_long_record_type_used_for_testing_a_cosmetic_issue_in_communities</fullName>
        <active>true</active>
        <label>This is the long record type used for testing a cosmetic issue in communities</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_name_lengh</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(Name)  &gt; 15</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account name has more than 15 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Information_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>RecordTypeId=&quot;012D0000000B1P3&quot; &amp;&amp; ISBLANK(BillingAddress)</errorConditionFormula>
        <errorMessage>Please fill in the Billing Address Information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_Call_Support</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

        NOT(
                    OR( ISPICKVAL( Support_Level__c , &quot;Gold&quot;) ,
                             ISPICKVAL(Support_Level__c , &quot;Platinum&quot;) 
                  )
        ),
         Can_Call_Support__c 
)</errorConditionFormula>
        <errorMessage>Only Platinum or Gold Customers are entitled to call support.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_settings</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
!$Setup.No_Validations__c.Flag__c, 
Phone = &quot;00&quot;)</errorConditionFormula>
        <errorMessage>You cannot create an account. Check validation rule called Custom settings</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NFR_key_valid_to_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NFR_key_issued__c  = TRUE ,  ISBLANK(NFR_key_valid_to__c) )</errorConditionFormula>
        <errorDisplayField>NFR_key_valid_to__c</errorDisplayField>
        <errorMessage>Tienes que introducir una fecha en NFR_key_valid_to</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Red_light</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS( Credit_Warning__c , &quot;light_red&quot;)</errorConditionFormula>
        <errorDisplayField>Font_color__pc</errorDisplayField>
        <errorMessage>The account has red light</errorMessage>
    </validationRules>
</CustomObject>